--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
+    <title>This is the title.</title>
   </head>
   <body>
-    
+    <p>Look an opening paragraph</p>
   </body>
 </html>
